GPL/P5/y.output
Terminals unused in grammar

    "true"
    "false"
    "touches"
    "near"
    "."
    "error"
    IF_NO_ELSE


Rules useless in parser due to conflicts

  113 math_operator: "-"


State 78 conflicts: 1 shift/reduce
State 200 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list block_list

    2 declaration_list: declaration_list declaration
    3                 | empty

    4 declaration: variable_declaration ";"
    5            | object_declaration ";"
    6            | forward_declaration ";"

    7 variable_declaration: simple_type "identifier" optional_initializer

    8 simple_type: "int"
    9            | "double"
   10            | "string"

   11 optional_initializer: "=" expression
   12                     | empty

   13 object_declaration: object_type "identifier" "(" parameter_list_or_empty ")"
   14                   | object_type "identifier" "[" expression "]"

   15 object_type: "triangle"
   16            | "pixmap"
   17            | "circle"
   18            | "rectangle"
   19            | "textbox"

   20 parameter_list_or_empty: parameter_list
   21                        | empty

   22 parameter_list: parameter_list "," parameter
   23               | parameter

   24 parameter: "identifier" "=" expression

   25 forward_declaration: "forward" "animation" "identifier" "(" animation_parameter ")"

   26 block_list: block_list block
   27           | empty

   28 block: initialization_block
   29      | termination_block
   30      | animation_block
   31      | on_block

   32 initialization_block: "initialization" statement_block

   33 termination_block: "termination" statement_block

   34 animation_block: "animation" "identifier" "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

   35 animation_parameter: object_type "identifier"

   36 check_animation_parameter: object_type "identifier"

   37 on_block: "on" keystroke statement_block

   38 keystroke: "space"
   39          | "leftarrow"
   40          | "rightarrow"
   41          | "uparrow"
   42          | "downarrow"
   43          | "leftmouse_down"
   44          | "middlemouse_down"
   45          | "rightmouse_down"
   46          | "leftmouse_up"
   47          | "middlemouse_up"
   48          | "rightmouse_up"
   49          | "mouse_move"
   50          | "mouse_drag"
   51          | "f1"
   52          | "akey"
   53          | "skey"
   54          | "dkey"
   55          | "fkey"
   56          | "hkey"
   57          | "jkey"
   58          | "kkey"
   59          | "lkey"
   60          | "wkey"
   61          | "zkey"

   62 if_block: statement_block_creator statement end_of_statement_block
   63         | statement_block

   64 statement_block: "{" statement_block_creator statement_list "}" end_of_statement_block

   65 statement_block_creator: ε

   66 end_of_statement_block: ε

   67 statement_list: statement_list statement
   68               | empty

   69 statement: if_statement
   70          | for_statement
   71          | print_statement ";"
   72          | exit_statement ";"
   73          | assign_statement_or_empty ";"

   74 if_statement: "if" "(" expression ")" if_block
   75             | "if" "(" expression ")" if_block "else" if_block

   76 for_statement: "for" "(" statement_block_creator assign_statement_or_empty end_of_statement_block ";" expression ";" statement_block_creator assign_statement_or_empty end_of_statement_block ")" statement_block

   77 print_statement: "print" "(" expression ")"

   78 exit_statement: "exit" "(" expression ")"

   79 assign_statement_or_empty: assign_statement
   80                          | empty

   81 assign_statement: variable "=" expression
   82                 | variable "+=" expression
   83                 | variable "-=" expression
   84                 | variable "++"
   85                 | variable "--"

   86 variable: "identifier"
   87         | "identifier" "[" expression "]"

   88 expression: primary_expression
   89           | expression "||" expression
   90           | expression "&&" expression
   91           | expression "<=" expression
   92           | expression ">=" expression
   93           | expression "<" expression
   94           | expression ">" expression
   95           | expression "==" expression
   96           | expression "!=" expression
   97           | expression "+" expression
   98           | expression "-" expression
   99           | expression "*" expression
  100           | expression "/" expression
  101           | expression "%" expression
  102           | "-" expression
  103           | "!" expression
  104           | math_operator "(" expression ")"

  105 primary_expression: "(" expression ")"
  106                   | variable
  107                   | "int constant"
  108                   | "double constant"
  109                   | "string constant"

  110 math_operator: "*"
  111              | "/"
  112              | "+"
  113              | "-"
  114              | "%"
  115              | "sin"
  116              | "cos"
  117              | "tan"
  118              | "asin"
  119              | "acos"
  120              | "atan"
  121              | "sqrt"
  122              | "floor"
  123              | "abs"
  124              | "random"

  125 empty: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "int" (258) 8
    "double" (259) 9
    "string" (260) 10
    "triangle" (261) 15
    "pixmap" (262) 16
    "circle" (263) 17
    "rectangle" (264) 18
    "textbox" (265) 19
    "forward" <union_int> (266) 25
    "initialization" (267) 32
    "termination" (268) 33
    "true" (269)
    "false" (270)
    "on" (271) 37
    "space" (272) 38
    "leftarrow" (273) 39
    "rightarrow" (274) 40
    "uparrow" (275) 41
    "downarrow" (276) 42
    "leftmouse_down" (277) 43
    "middlemouse_down" (278) 44
    "rightmouse_down" (279) 45
    "leftmouse_up" (280) 46
    "middlemouse_up" (281) 47
    "rightmouse_up" (282) 48
    "mouse_move" (283) 49
    "mouse_drag" (284) 50
    "f1" (285) 51
    "akey" (286) 52
    "skey" (287) 53
    "dkey" (288) 54
    "fkey" (289) 55
    "hkey" (290) 56
    "jkey" (291) 57
    "kkey" (292) 58
    "lkey" (293) 59
    "wkey" (294) 60
    "zkey" (295) 61
    "touches" (296)
    "near" (297)
    "animation" (298) 25 34
    "if" (299) 74 75
    "for" (300) 76
    "else" (301) 75
    "print" <union_int> (302) 77
    "exit" <union_int> (303) 78
    "(" (304) 13 25 34 74 75 76 77 78 104 105
    ")" (305) 13 25 34 74 75 76 77 78 104 105
    "{" (306) 34 64
    "}" (307) 34 64
    "[" (308) 14 87
    "]" (309) 14 87
    ";" (310) 4 5 6 71 72 73 76
    "," (311) 22
    "." (312)
    "=" (313) 11 24 81
    "+=" (314) 82
    "-=" (315) 83
    "++" (316) 84
    "--" (317) 85
    "*" (318) 99 110
    "/" (319) 100 111
    "%" (320) 101 114
    "+" (321) 97 112
    "-" (322) 98 102 113
    "sin" (323) 115
    "cos" (324) 116
    "tan" (325) 117
    "asin" (326) 118
    "acos" (327) 119
    "atan" (328) 120
    "sqrt" (329) 121
    "floor" (330) 122
    "abs" (331) 123
    "random" (332) 124
    "<" (333) 93
    ">" (334) 94
    "<=" (335) 91
    ">=" (336) 92
    "==" (337) 95
    "!=" (338) 96
    "&&" (339) 90
    "||" (340) 89
    "!" (341) 103
    "identifier" <union_string> (342) 7 13 14 24 25 34 35 36 86 87
    "int constant" <union_int> (343) 107
    "double constant" <union_double> (344) 108
    "string constant" <union_string> (345) 109
    "error" (346)
    IF_NO_ELSE (347)
    UNARY_OPS (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    program (95)
        on left: 1
        on right: 0
    declaration_list (96)
        on left: 2 3
        on right: 1 2
    declaration (97)
        on left: 4 5 6
        on right: 2
    variable_declaration (98)
        on left: 7
        on right: 4
    simple_type <gpl_type> (99)
        on left: 8 9 10
        on right: 7
    optional_initializer <union_expression> (100)
        on left: 11 12
        on right: 7
    object_declaration (101)
        on left: 13 14
        on right: 5
    object_type (102)
        on left: 15 16 17 18 19
        on right: 13 14 35 36
    parameter_list_or_empty (103)
        on left: 20 21
        on right: 13
    parameter_list (104)
        on left: 22 23
        on right: 20 22
    parameter (105)
        on left: 24
        on right: 22 23
    forward_declaration (106)
        on left: 25
        on right: 6
    block_list (107)
        on left: 26 27
        on right: 1 26
    block (108)
        on left: 28 29 30 31
        on right: 26
    initialization_block (109)
        on left: 32
        on right: 28
    termination_block (110)
        on left: 33
        on right: 29
    animation_block (111)
        on left: 34
        on right: 30
    animation_parameter (112)
        on left: 35
        on right: 25
    check_animation_parameter (113)
        on left: 36
        on right: 34
    on_block (114)
        on left: 37
        on right: 31
    keystroke (115)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
        on right: 37
    if_block (116)
        on left: 62 63
        on right: 74 75
    statement_block (117)
        on left: 64
        on right: 32 33 37 63 76
    statement_block_creator (118)
        on left: 65
        on right: 62 64 76
    end_of_statement_block (119)
        on left: 66
        on right: 34 62 64 76
    statement_list (120)
        on left: 67 68
        on right: 34 64 67
    statement (121)
        on left: 69 70 71 72 73
        on right: 62 67
    if_statement (122)
        on left: 74 75
        on right: 69
    for_statement (123)
        on left: 76
        on right: 70
    print_statement (124)
        on left: 77
        on right: 71
    exit_statement (125)
        on left: 78
        on right: 72
    assign_statement_or_empty (126)
        on left: 79 80
        on right: 73 76
    assign_statement (127)
        on left: 81 82 83 84 85
        on right: 79
    variable <union_variable> (128)
        on left: 86 87
        on right: 81 82 83 84 85 106
    expression <union_expression> (129)
        on left: 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
        on right: 11 14 24 74 75 76 77 78 81 82 83 87 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    primary_expression <union_expression> (130)
        on left: 105 106 107 108 109
        on right: 88
    math_operator <gpl_type> (131)
        on left: 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124
        on right: 104
    empty (132)
        on left: 125
        on right: 3 12 21 27 68 80


State 0

    0 $accept: • program $end

    $default  reduce using rule 125 (empty)

    program           go to state 1
    declaration_list  go to state 2
    empty             go to state 3


State 1

    0 $accept: program • $end

    $end  shift, and go to state 4


State 2

    1 program: declaration_list • block_list
    2 declaration_list: declaration_list • declaration

    "int"        shift, and go to state 5
    "double"     shift, and go to state 6
    "string"     shift, and go to state 7
    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12
    "forward"    shift, and go to state 13

    $default  reduce using rule 125 (empty)

    declaration           go to state 14
    variable_declaration  go to state 15
    simple_type           go to state 16
    object_declaration    go to state 17
    object_type           go to state 18
    forward_declaration   go to state 19
    block_list            go to state 20
    empty                 go to state 21


State 3

    3 declaration_list: empty •

    $default  reduce using rule 3 (declaration_list)


State 4

    0 $accept: program $end •

    $default  accept


State 5

    8 simple_type: "int" •

    $default  reduce using rule 8 (simple_type)


State 6

    9 simple_type: "double" •

    $default  reduce using rule 9 (simple_type)


State 7

   10 simple_type: "string" •

    $default  reduce using rule 10 (simple_type)


State 8

   15 object_type: "triangle" •

    $default  reduce using rule 15 (object_type)


State 9

   16 object_type: "pixmap" •

    $default  reduce using rule 16 (object_type)


State 10

   17 object_type: "circle" •

    $default  reduce using rule 17 (object_type)


State 11

   18 object_type: "rectangle" •

    $default  reduce using rule 18 (object_type)


State 12

   19 object_type: "textbox" •

    $default  reduce using rule 19 (object_type)


State 13

   25 forward_declaration: "forward" • "animation" "identifier" "(" animation_parameter ")"

    "animation"  shift, and go to state 22


State 14

    2 declaration_list: declaration_list declaration •

    $default  reduce using rule 2 (declaration_list)


State 15

    4 declaration: variable_declaration • ";"

    ";"  shift, and go to state 23


State 16

    7 variable_declaration: simple_type • "identifier" optional_initializer

    "identifier"  shift, and go to state 24


State 17

    5 declaration: object_declaration • ";"

    ";"  shift, and go to state 25


State 18

   13 object_declaration: object_type • "identifier" "(" parameter_list_or_empty ")"
   14                   | object_type • "identifier" "[" expression "]"

    "identifier"  shift, and go to state 26


State 19

    6 declaration: forward_declaration • ";"

    ";"  shift, and go to state 27


State 20

    1 program: declaration_list block_list •
   26 block_list: block_list • block

    "initialization"  shift, and go to state 28
    "termination"     shift, and go to state 29
    "on"              shift, and go to state 30
    "animation"       shift, and go to state 31

    $default  reduce using rule 1 (program)

    block                 go to state 32
    initialization_block  go to state 33
    termination_block     go to state 34
    animation_block       go to state 35
    on_block              go to state 36


State 21

   27 block_list: empty •

    $default  reduce using rule 27 (block_list)


State 22

   25 forward_declaration: "forward" "animation" • "identifier" "(" animation_parameter ")"

    "identifier"  shift, and go to state 37


State 23

    4 declaration: variable_declaration ";" •

    $default  reduce using rule 4 (declaration)


State 24

    7 variable_declaration: simple_type "identifier" • optional_initializer

    "="  shift, and go to state 38

    $default  reduce using rule 125 (empty)

    optional_initializer  go to state 39
    empty                 go to state 40


State 25

    5 declaration: object_declaration ";" •

    $default  reduce using rule 5 (declaration)


State 26

   13 object_declaration: object_type "identifier" • "(" parameter_list_or_empty ")"
   14                   | object_type "identifier" • "[" expression "]"

    "("  shift, and go to state 41
    "["  shift, and go to state 42


State 27

    6 declaration: forward_declaration ";" •

    $default  reduce using rule 6 (declaration)


State 28

   32 initialization_block: "initialization" • statement_block

    "{"  shift, and go to state 43

    statement_block  go to state 44


State 29

   33 termination_block: "termination" • statement_block

    "{"  shift, and go to state 43

    statement_block  go to state 45


State 30

   37 on_block: "on" • keystroke statement_block

    "space"             shift, and go to state 46
    "leftarrow"         shift, and go to state 47
    "rightarrow"        shift, and go to state 48
    "uparrow"           shift, and go to state 49
    "downarrow"         shift, and go to state 50
    "leftmouse_down"    shift, and go to state 51
    "middlemouse_down"  shift, and go to state 52
    "rightmouse_down"   shift, and go to state 53
    "leftmouse_up"      shift, and go to state 54
    "middlemouse_up"    shift, and go to state 55
    "rightmouse_up"     shift, and go to state 56
    "mouse_move"        shift, and go to state 57
    "mouse_drag"        shift, and go to state 58
    "f1"                shift, and go to state 59
    "akey"              shift, and go to state 60
    "skey"              shift, and go to state 61
    "dkey"              shift, and go to state 62
    "fkey"              shift, and go to state 63
    "hkey"              shift, and go to state 64
    "jkey"              shift, and go to state 65
    "kkey"              shift, and go to state 66
    "lkey"              shift, and go to state 67
    "wkey"              shift, and go to state 68
    "zkey"              shift, and go to state 69

    keystroke  go to state 70


State 31

   34 animation_block: "animation" • "identifier" "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "identifier"  shift, and go to state 71


State 32

   26 block_list: block_list block •

    $default  reduce using rule 26 (block_list)


State 33

   28 block: initialization_block •

    $default  reduce using rule 28 (block)


State 34

   29 block: termination_block •

    $default  reduce using rule 29 (block)


State 35

   30 block: animation_block •

    $default  reduce using rule 30 (block)


State 36

   31 block: on_block •

    $default  reduce using rule 31 (block)


State 37

   25 forward_declaration: "forward" "animation" "identifier" • "(" animation_parameter ")"

    "("  shift, and go to state 72


State 38

   11 optional_initializer: "=" • expression

    "("                shift, and go to state 73
    "*"                shift, and go to state 74
    "/"                shift, and go to state 75
    "%"                shift, and go to state 76
    "+"                shift, and go to state 77
    "-"                shift, and go to state 78
    "sin"              shift, and go to state 79
    "cos"              shift, and go to state 80
    "tan"              shift, and go to state 81
    "asin"             shift, and go to state 82
    "acos"             shift, and go to state 83
    "atan"             shift, and go to state 84
    "sqrt"             shift, and go to state 85
    "floor"            shift, and go to state 86
    "abs"              shift, and go to state 87
    "random"           shift, and go to state 88
    "!"                shift, and go to state 89
    "identifier"       shift, and go to state 90
    "int constant"     shift, and go to state 91
    "double constant"  shift, and go to state 92
    "string constant"  shift, and go to state 93

    variable            go to state 94
    expression          go to state 95
    primary_expression  go to state 96
    math_operator       go to state 97


State 39

    7 variable_declaration: simple_type "identifier" optional_initializer •

    $default  reduce using rule 7 (variable_declaration)


State 40

   12 optional_initializer: empty •

    $default  reduce using rule 12 (optional_initializer)


State 41

   13 object_declaration: object_type "identifier" "(" • parameter_list_or_empty ")"

    "identifier"  shift, and go to state 98

    $default  reduce using rule 125 (empty)

    parameter_list_or_empty  go to state 99
    parameter_list           go to state 100
    parameter                go to state 101
    empty                    go to state 102


State 42

   14 object_declaration: object_type "identifier" "[" • expression "]"

    "("                shift, and go to state 73
    "*"                shift, and go to state 74
    "/"                shift, and go to state 75
    "%"                shift, and go to state 76
    "+"                shift, and go to state 77
    "-"                shift, and go to state 78
    "sin"              shift, and go to state 79
    "cos"              shift, and go to state 80
    "tan"              shift, and go to state 81
    "asin"             shift, and go to state 82
    "acos"             shift, and go to state 83
    "atan"             shift, and go to state 84
    "sqrt"             shift, and go to state 85
    "floor"            shift, and go to state 86
    "abs"              shift, and go to state 87
    "random"           shift, and go to state 88
    "!"                shift, and go to state 89
    "identifier"       shift, and go to state 90
    "int constant"     shift, and go to state 91
    "double constant"  shift, and go to state 92
    "string constant"  shift, and go to state 93

    variable            go to state 94
    expression          go to state 103
    primary_expression  go to state 96
    math_operator       go to state 97


State 43

   64 statement_block: "{" • statement_block_creator statement_list "}" end_of_statement_block

    $default  reduce using rule 65 (statement_block_creator)

    statement_block_creator  go to state 104


State 44

   32 initialization_block: "initialization" statement_block •

    $default  reduce using rule 32 (initialization_block)


State 45

   33 termination_block: "termination" statement_block •

    $default  reduce using rule 33 (termination_block)


State 46

   38 keystroke: "space" •

    $default  reduce using rule 38 (keystroke)


State 47

   39 keystroke: "leftarrow" •

    $default  reduce using rule 39 (keystroke)


State 48

   40 keystroke: "rightarrow" •

    $default  reduce using rule 40 (keystroke)


State 49

   41 keystroke: "uparrow" •

    $default  reduce using rule 41 (keystroke)


State 50

   42 keystroke: "downarrow" •

    $default  reduce using rule 42 (keystroke)


State 51

   43 keystroke: "leftmouse_down" •

    $default  reduce using rule 43 (keystroke)


State 52

   44 keystroke: "middlemouse_down" •

    $default  reduce using rule 44 (keystroke)


State 53

   45 keystroke: "rightmouse_down" •

    $default  reduce using rule 45 (keystroke)


State 54

   46 keystroke: "leftmouse_up" •

    $default  reduce using rule 46 (keystroke)


State 55

   47 keystroke: "middlemouse_up" •

    $default  reduce using rule 47 (keystroke)


State 56

   48 keystroke: "rightmouse_up" •

    $default  reduce using rule 48 (keystroke)


State 57

   49 keystroke: "mouse_move" •

    $default  reduce using rule 49 (keystroke)


State 58

   50 keystroke: "mouse_drag" •

    $default  reduce using rule 50 (keystroke)


State 59

   51 keystroke: "f1" •

    $default  reduce using rule 51 (keystroke)


State 60

   52 keystroke: "akey" •

    $default  reduce using rule 52 (keystroke)


State 61

   53 keystroke: "skey" •

    $default  reduce using rule 53 (keystroke)


State 62

   54 keystroke: "dkey" •

    $default  reduce using rule 54 (keystroke)


State 63

   55 keystroke: "fkey" •

    $default  reduce using rule 55 (keystroke)


State 64

   56 keystroke: "hkey" •

    $default  reduce using rule 56 (keystroke)


State 65

   57 keystroke: "jkey" •

    $default  reduce using rule 57 (keystroke)


State 66

   58 keystroke: "kkey" •

    $default  reduce using rule 58 (keystroke)


State 67

   59 keystroke: "lkey" •

    $default  reduce using rule 59 (keystroke)


State 68

   60 keystroke: "wkey" •

    $default  reduce using rule 60 (keystroke)


State 69

   61 keystroke: "zkey" •

    $default  reduce using rule 61 (keystroke)


State 70

   37 on_block: "on" keystroke • statement_block

    "{"  shift, and go to state 43

    statement_block  go to state 105


State 71

   34 animation_block: "animation" "identifier" • "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "("  shift, and go to state 106


State 72

   25 forward_declaration: "forward" "animation" "identifier" "(" • animation_parameter ")"

    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12

    object_type          go to state 107
    animation_parameter  go to state 108


State 73

  105 primary_expression: "(" • expression ")"

    "("                shift, and go to state 73
    "*"                shift, and go to state 74
    "/"                shift, and go to state 75
    "%"                shift, and go to state 76
    "+"                shift, and go to state 77
    "-"                shift, and go to state 78
    "sin"              shift, and go to state 79
    "cos"              shift, and go to state 80
    "tan"              shift, and go to state 81
    "asin"             shift, and go to state 82
    "acos"             shift, and go to state 83
    "atan"             shift, and go to state 84
    "sqrt"             shift, and go to state 85
    "floor"            shift, and go to state 86
    "abs"              shift, and go to state 87
    "random"           shift, and go to state 88
    "!"                shift, and go to state 89
    "identifier"       shift, and go to state 90
    "int constant"     shift, and go to state 91
    "double constant"  shift, and go to state 92
    "string constant"  shift, and go to state 93

    variable            go to state 94
    expression          go to state 109
    primary_expression  go to state 96
    math_operator       go to state 97


State 74

  110 math_operator: "*" •

    $default  reduce using rule 110 (math_operator)


State 75

  111 math_operator: "/" •

    $default  reduce using rule 111 (math_operator)


State 76

  114 math_operator: "%" •

    $default  reduce using rule 114 (math_operator)


State 77

  112 math_operator: "+" •

    $default  reduce using rule 112 (math_operator)


State 78

  102 expression: "-" • expression
  113 math_operator: "-" •

    "("                shift, and go to state 73
    "*"                shift, and go to state 74
    "/"                shift, and go to state 75
    "%"                shift, and go to state 76
    "+"                shift, and go to state 77
    "-"                shift, and go to state 78
    "sin"              shift, and go to state 79
    "cos"              shift, and go to state 80
    "tan"              shift, and go to state 81
    "asin"             shift, and go to state 82
    "acos"             shift, and go to state 83
    "atan"             shift, and go to state 84
    "sqrt"             shift, and go to state 85
    "floor"            shift, and go to state 86
    "abs"              shift, and go to state 87
    "random"           shift, and go to state 88
    "!"                shift, and go to state 89
    "identifier"       shift, and go to state 90
    "int constant"     shift, and go to state 91
    "double constant"  shift, and go to state 92
    "string constant"  shift, and go to state 93

    "("  [reduce using rule 113 (math_operator)]

    variable            go to state 94
    expression          go to state 110
    primary_expression  go to state 96
    math_operator       go to state 97


State 79

  115 math_operator: "sin" •

    $default  reduce using rule 115 (math_operator)


State 80

  116 math_operator: "cos" •

    $default  reduce using rule 116 (math_operator)


State 81

  117 math_operator: "tan" •

    $default  reduce using rule 117 (math_operator)


State 82

  118 math_operator: "asin" •

    $default  reduce using rule 118 (math_operator)


State 83

  119 math_operator: "acos" •

    $default  reduce using rule 119 (math_operator)


State 84

  120 math_operator: "atan" •

    $default  reduce using rule 120 (math_operator)


State 85

  121 math_operator: "sqrt" •

    $default  reduce using rule 121 (math_operator)


State 86

  122 math_operator: "floor" •

    $default  reduce using rule 122 (math_operator)


State 87

  123 math_operator: "abs" •

    $default  reduce using rule 123 (math_operator)


State 88

  124 math_operator: "random" •

    $default  reduce using rule 124 (math_operator)


State 89

  103 expression: "!" • expression

    "("                shift, and go to state 73
    "*"                shift, and go to state 74
    "/"                shift, and go to state 75
    "%"                shift, and go to state 76
    "+"                shift, and go to state 77
    "-"                shift, and go to state 78
    "sin"              shift, and go to state 79
    "cos"              shift, and go to state 80
    "tan"              shift, and go to state 81
    "asin"             shift, and go to state 82
    "acos"             shift, and go to state 83
    "atan"             shift, and go to state 84
    "sqrt"             shift, and go to state 85
    "floor"            shift, and go to state 86
    "abs"              shift, and go to state 87
    "random"           shift, and go to state 88
    "!"                shift, and go to state 89
    "identifier"       shift, and go to state 90
    "int constant"     shift, and go to state 91
    "double constant"  shift, and go to state 92
    "string constant"  shift, and go to state 93

    variable            go to state 94
    expression          go to state 111
    primary_expression  go to state 96
    math_operator       go to state 97


State 90

   86 variable: "identifier" •
   87         | "identifier" • "[" expression "]"

    "["  shift, and go to state 112

    $default  reduce using rule 86 (variable)


State 91

  107 primary_expression: "int constant" •

    $default  reduce using rule 107 (primary_expression)


State 92

  108 primary_expression: "double constant" •

    $default  reduce using rule 108 (primary_expression)


State 93

  109 primary_expression: "string constant" •

    $default  reduce using rule 109 (primary_expression)


State 94

  106 primary_expression: variable •

    $default  reduce using rule 106 (primary_expression)


State 95

   11 optional_initializer: "=" expression •
   89 expression: expression • "||" expression
   90           | expression • "&&" expression
   91           | expression • "<=" expression
   92           | expression • ">=" expression
   93           | expression • "<" expression
   94           | expression • ">" expression
   95           | expression • "==" expression
   96           | expression • "!=" expression
   97           | expression • "+" expression
   98           | expression • "-" expression
   99           | expression • "*" expression
  100           | expression • "/" expression
  101           | expression • "%" expression

    "*"   shift, and go to state 113
    "/"   shift, and go to state 114
    "%"   shift, and go to state 115
    "+"   shift, and go to state 116
    "-"   shift, and go to state 117
    "<"   shift, and go to state 118
    ">"   shift, and go to state 119
    "<="  shift, and go to state 120
    ">="  shift, and go to state 121
    "=="  shift, and go to state 122
    "!="  shift, and go to state 123
    "&&"  shift, and go to state 124
    "||"  shift, and go to state 125

    $default  reduce using rule 11 (optional_initializer)


State 96

   88 expression: primary_expression •

    $default  reduce using rule 88 (expression)


State 97

  104 expression: math_operator • "(" expression ")"

    "("  shift, and go to state 126


State 98

   24 parameter: "identifier" • "=" expression

    "="  shift, and go to state 127


State 99

   13 object_declaration: object_type "identifier" "(" parameter_list_or_empty • ")"

    ")"  shift, and go to state 128


State 100

   20 parameter_list_or_empty: parameter_list •
   22 parameter_list: parameter_list • "," parameter

    ","  shift, and go to state 129

    $default  reduce using rule 20 (parameter_list_or_empty)


State 101

   23 parameter_list: parameter •

    $default  reduce using rule 23 (parameter_list)


State 102

   21 parameter_list_or_empty: empty •

    $default  reduce using rule 21 (parameter_list_or_empty)


State 103

   14 object_declaration: object_type "identifier" "[" expression • "]"
   89 expression: expression • "||" expression
   90           | expression • "&&" expression
   91           | expression • "<=" expression
   92           | expression • ">=" expression
   93           | expression • "<" expression
   94           | expression • ">" expression
   95           | expression • "==" expression
   96           | expression • "!=" expression
   97           | expression • "+" expression
   98           | expression • "-" expression
   99           | expression • "*" expression
  100           | expression • "/" expression
  101           | expression • "%" expression

    "]"   shift, and go to state 130
    "*"   shift, and go to state 113
    "/"   shift, and go to state 114
    "%"   shift, and go to state 115
    "+"   shift, and go to state 116
    "-"   shift, and go to state 117
    "<"   shift, and go to state 118
    ">"   shift, and go to state 119
    "<="  shift, and go to state 120
    ">="  shift, and go to state 121
    "=="  shift, and go to state 122
    "!="  shift, and go to state 123
    "&&"  shift, and go to state 124
    "||"  shift, and go to state 125


State 104

   64 statement_block: "{" statement_block_creator • statement_list "}" end_of_statement_block

    $default  reduce using rule 125 (empty)

    statement_list  go to state 131
    empty           go to state 132


State 105

   37 on_block: "on" keystroke statement_block •

    $default  reduce using rule 37 (on_block)


State 106

   34 animation_block: "animation" "identifier" "(" • check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12

    object_type                go to state 133
    check_animation_parameter  go to state 134


State 107

   35 animation_parameter: object_type • "identifier"

    "identifier"  shift, and go to state 135


State 108

   25 forward_declaration: "forward" "animation" "identifier" "(" animation_parameter • ")"

    ")"  shift, and go to state 136


State 109

   89 expression: expression • "||" expression
   90           | expression • "&&" expression
   91           | expression • "<=" expression
   92           | expression • ">=" expression
   93           | expression • "<" expression
   94           | expression • ">" expression
   95           | expression • "==" expression
   96           | expression • "!=" expression
   97           | expression • "+" expression
   98           | expression • "-" expression
   99           | expression • "*" expression
  100           | expression • "/" expression
  101           | expression • "%" expression
  105 primary_expression: "(" expression • ")"

    ")"   shift, and go to state 137
    "*"   shift, and go to state 113
    "/"   shift, and go to state 114
    "%"   shift, and go to state 115
    "+"   shift, and go to state 116
    "-"   shift, and go to state 117
    "<"   shift, and go to state 118
    ">"   shift, and go to state 119
    "<="  shift, and go to state 120
    ">="  shift, and go to state 121
    "=="  shift, and go to state 122
    "!="  shift, and go to state 123
    "&&"  shift, and go to state 124
    "||"  shift, and go to state 125


State 110

   89 expression: expression • "||" expression
   90           | expression • "&&" expression
   91           | expression • "<=" expression
   92           | expression • ">=" expression
   93           | expression • "<" expression
   94           | expression • ">" expression
   95           | expression • "==" expression
   96           | expression • "!=" expression
   97           | expression • "+" expression
   98           | expression • "-" expression
   99           | expression • "*" expression
  100           | expression • "/" expression
  101           | expression • "%" expression
  102           | "-" expression •

    $default  reduce using rule 102 (expression)


State 111

   89 expression: expression • "||" expression
   90           | expression • "&&" expression
   91           | expression • "<=" expression
   92           | expression • ">=" expression
   93           | expression • "<" expression
   94           | expression • ">" expression
   95           | expression • "==" expression
   96           | expression • "!=" expression
   97           | expression • "+" expression
   98           | expression • "-" expression
   99           | expression • "*" expression
  100           | expression • "/" expression
  101           | expression • "%" expression
  103           | "!" expression •

    $default  reduce using rule 103 (expression)


State 112

   87 variable: "identifier" "[" • expression "]"

    "("                shift, and go to state 73
    "*"                shift, and go to state 74
    "/"                shift, and go to state 75
    "%"                shift, and go to state 76
    "+"                shift, and go to state 77
    "-"                shift, and go to state 78
    "sin"              shift, and go to state 79
    "cos"              shift, and go to state 80
    "tan"              shift, and go to state 81
    "asin"             shift, and go to state 82
    "acos"             shift, and go to state 83
    "atan"             shift, and go to state 84
    "sqrt"             shift, and go to state 85
    "floor"            shift, and go to state 86
    "abs"              shift, and go to state 87
    "random"           shift, and go to state 88
    "!"                shift, and go to state 89
    "identifier"       shift, and go to state 90
    "int constant"     shift, and go to state 91
    "double constant"  shift, and go to state 92
    "string constant"  shift, and go to state 93

    variable            go to state 94
    expression          go to state 138
    primary_expression  go to state 96
    math_operator       go to state 97


State 113

   99 expression: expression "*" • expression

    "("                shift, and go to state 73
    "*"                shift, and go to state 74
    "/"                shift, and go to state 75
    "%"                shift, and go to state 76
    "+"                shift, and go to state 77
    "-"                shift, and go to state 78
    "sin"              shift, and go to state 79
    "cos"              shift, and go to state 80
    "tan"              shift, and go to state 81
    "asin"             shift, and go to state 82
    "acos"             shift, and go to state 83
    "atan"             shift, and go to state 84
    "sqrt"             shift, and go to state 85
    "floor"            shift, and go to state 86
    "abs"              shift, and go to state 87
    "random"           shift, and go to state 88
    "!"                shift, and go to state 89
    "identifier"       shift, and go to state 90
    "int constant"     shift, and go to state 91
    "double constant"  shift, and go to state 92
    "string constant"  shift, and go to state 93

    variable            go to state 94
    expression          go to state 139
    primary_expression  go to state 96
    math_operator       go to state 97


State 114

  100 expression: expression "/" • expression

    "("                shift, and go to state 73
    "*"                shift, and go to state 74
    "/"                shift, and go to state 75
    "%"                shift, and go to state 76
    "+"                shift, and go to state 77
    "-"                shift, and go to state 78
    "sin"              shift, and go to state 79
    "cos"              shift, and go to state 80
    "tan"              shift, and go to state 81
    "asin"             shift, and go to state 82
    "acos"             shift, and go to state 83
    "atan"             shift, and go to state 84
    "sqrt"             shift, and go to state 85
    "floor"            shift, and go to state 86
    "abs"              shift, and go to state 87
    "random"           shift, and go to state 88
    "!"                shift, and go to state 89
    "identifier"       shift, and go to state 90
    "int constant"     shift, and go to state 91
    "double constant"  shift, and go to state 92
    "string constant"  shift, and go to state 93

    variable            go to state 94
    expression          go to state 140
    primary_expression  go to state 96
    math_operator       go to state 97


State 115

  101 expression: expression "%" • expression
